{{$NEXT}}

0.4.11  2021-02-11T15:36:59+13:00
  - Fixed PDF::ColorSpace coercement of [/Pattern]
  - Fixed PDF::Function::Sampled handling of uncompressed stream data

Release 0.4.10
- Rename of PDF::Reader -> PDF::IO::Reader and PDF::Writer -> PDF::IO::Writer
 in PDF v0.4.5

Release 0.4.9
- Add external PDF::MarkInfo role.

Release 0.4.8
- Use COS COERCE() method, introduced with PDF 0.4.4+ coercion semantics.
- Fix invalid pdf-function-sampled.t stream /Length test.

Release 0.4.7
- Change PDF::Function::Postscript calc() return value from Seq to Array - for
  consistency with other function types.
- Fix Font::Descriptor::CID, broken in last release (PDF::Tags issue #4)

Release 0.4.6
- Fix SMask (soft-mask) handling in PDF::Image to-png() method
- Add role for Font::Descriptor::CID /Style entry
- Export PDF::Field::Choice :FieldOptions, :&coerce-field-opts for reuse
  by FDF::Field (FDF module)
- Declare entries as PDF::COS::TextString in PDF::AcroForm, PDF::Action::SubmitForm,
  PDF::OutputIntent. We need these to correctly encode and decode as UTF-8/PDFDoc.

Release 0.4.5
- Renamed sub &export: PDF::Field :&coerce -> :&coerce-field
- Correct additional actions (added in 0.4.4); seperate roles for
  Catalog, Fields, Annotations and Pages. #15
- Added class PDF::Action::SubmitForm
- Fix t/pdf-outline.t to work with PDF v0.4.4
- Fix pdf-toc.raku

Release 0.4.4
- Add PDF::Class::Defs. Fix annot detection in PDF::Field
- Rename methods PDF::Field.flags -> PDF::Field.field-flags and
  PDF::Annots.flags -> PDF::Annots.annot-flags. Keep these distinct
  as the PDF::Field role is commonly mixed into PDF::Annot.
- Add enumerations PDF::Annot :AnnotFlag and PDF::Field :FieldFlag,
  :BtnFieldFlag, :TextFieldFlag, ChoiceFieldFlag
- Add role PDF::AdditionalActions
- Renamed github project and repository p6-pdf/PDF-Class-p6 -> pdf-raku/PDF-Class-raku

Release 0.4.3
- [PDF::Field]
  -- fix .fields() and .fields-hash() methods to return only terminal fields