@@ -8,7 +8,7 @@
   "depends": [
     "PDF:ver<0.4.5+>",
     "PDF::Grammar:ver<0.2.4+>",
-    "PDF::Content:ver<0.4.11+>"
+    "PDF::Content:ver<0.5.0+>"
   ],
   "description": "PDF Document Object Model",
   "license": "Artistic-2.0",
