@@ -1,8 +1,10 @@
 {{$NEXT}}
+  - Fix tests for PDF::Content v0.5.0+. core-font() now returns a
+    PDF::Content::FontObj object.
 
 0.4.11  2021-02-11T15:36:59+13:00
-  - Fixed PDF::ColorSpace coercement of [/Pattern]
-  - Fixed PDF::Function::Sampled handling of uncompressed stream data
+  - Fix PDF::ColorSpace coercement of [/Pattern]
+  - Fix PDF::Function::Sampled handling of uncompressed stream data
 
 Release 0.4.10
 - Rename of PDF::Reader -> PDF::IO::Reader and PDF::Writer -> PDF::IO::Writer
